[package]
name = "SkyLinksProg"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
crossbeam-channel = "0.5.13"
egui = "0.24"
eframe = "0.24"
winapi = { version = "0.3", features = ["winuser"] }
fastrand = "2.2.0"